separacion de secciones en variables

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,41 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="../sass/style-sass.css">
+    <title>catálogo</title>
+</head>
+<body>
+    <header class="flex-container-1">      
+        <p class="flex-item-1"><a href="../index.html">inicio</a></p> 
+        <p class="flex-item-1"><a href="./nosotros.html">nosotros</a></p>
+        <p class="flex-item-1"><a href="./catalogo.html">catalogo</a></p>
+        <p class="flex-item-1"><a href="./nuestros-clientes.html">nuestros clientes</a></p>
+        <p class="flex-item-1"><a href="./contacto.html">contacto</a></p>
+    </header> 
+
+   
+
+
+    <footer class="flex-container-3">
+        <div class="flex-item-3">
+            <h3>Datos de Contacto</h3>
+            <p>Avenida uno, Comuna de Puente Alto #1234, Santiago</p>
+            <p>+56912345678</p>
+        </div>
+        <div class="flex-item-3">
+            <h3>Siguenos</h3>
+            <p><a href="https://www.instagram.com/carpintero_lc/">instagram</a></p>
+            
+        </div>
+    </footer>
+</body>
+</html> 
+
 </body>
 </html>
