--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="../sass/style-sass.css">
     <title>catálogo</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
         <p class="flex-item-1"><a href="../index.html">inicio</a></p> 
         <p class="flex-item-1"><a href="./nosotros.html">nosotros</a></p>
         <p class="flex-item-1"><a href="./catalogo.html">catalogo</a></p>
-        <p class="flex-item-1"><a href="./nosotros.html">nuestros clientes</a></p>
+        <p class="flex-item-1"><a href="./nuestros-clientes.html">nuestros clientes</a></p>
         <p class="flex-item-1"><a href="./contacto.html">contacto</a></p>
     </header> 
 
