--- a/pages/nuestros-clientes.html
+++ b/pages/nuestros-clientes.html
@@ -7,6 +7,28 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="flex-container-1">      
+        <p class="flex-item-1"><a href="../index.html">inicio</a></p> 
+        <p class="flex-item-1"><a href="./nosotros.html">nosotros</a></p>
+        <p class="flex-item-1"><a href="./catalogo.html">catalogo</a></p>
+        <p class="flex-item-1"><a href="./nuestros-clientes.html">nuestros clientes</a></p>
+        <p class="flex-item-1"><a href="./contacto.html">contacto</a></p>
+    </header> 
+
+   
+
+
+    <footer class="flex-container-3">
+        <div class="flex-item-3">
+            <h3>Datos de Contacto</h3>
+            <p>Avenida uno, Comuna de Puente Alto #1234, Santiago</p>
+            <p>+56912345678</p>
+        </div>
+        <div class="flex-item-3">
+            <h3>Siguenos</h3>
+            <p><a href="https://www.instagram.com/carpintero_lc/">instagram</a></p>
+            
+        </div>
+    </footer>
 </body>
 </html>
